assignment-3/css/assignment.css
body { 
  margin: 0;
  background-image: url('../pics/tile.png');
}

textarea {
  width: 100%;
  height: 20em;
}

header {
  min-height: 6em;
}

footer {
  height: 3em;
  bottom: 0;
}

header, footer {
  width: 100%;
  padding-top: 1em;
  padding-bottom: 1em;
  background-color: #111;
  color: #aaa;
  text-align: center;
}

nav {
  word-spacing: 1em;
  max-width: 50em;
  margin: auto;
}

nav a {
  display: block;
  background-color: #111;
  z-index: 1;
  text-decoration: none;
  position: relative;
  padding-bottom: 1em;
}

.dropdown {
  float: left;
  width: 25%;
}

nav a:hover {
  color: #fff;
}

.dropdown-content a:hover {
  background-color: #222;
}

section {
  padding: 1em;
  padding-top: 0em;
  max-width: 50em;
  margin: auto;
  text-align: justify;
  position: relative;
  top: -6em;
  border-left: 1px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  box-shadow: 0.2em 0.2em;
  background: rgba(255, 255, 255, 0.5);
}

h1 {
  overflow: hidden;
}

#title {
  font-size: 3em;
  font-family: Arial, serif;
  letter-spacing: 0.5em;
}

.count {
  float: left;
  margin: 0em 1em 0.5em 0em;
  display: block;
  border-radius: 0.5em;
  box-shadow: 0.2em 0.2em;
}

.blockquot {
  padding-left: 1em;
  border-left: 1em solid rgba(0, 0, 0, 0.3);
}

.tiles-container {
  display: flex;
  flex-wrap: wrap;
}

.tile {
  padding: 1vw;
  width: 33.33%;
  box-sizing: border-box;
  position: relative;
}

.tile .inner {
  display: block;
  padding: 1vw; 
  background: linear-gradient(45deg, #000, #666);
  border: 1px solid black;
}

.tile img {
  border: 1px solid black;
}

img {
  max-width: 100%;
}

img.center {
  margin: auto;
  display: block;
  max-width: 100%;
}

button {
  margin-bottom: 1em;
}

.tile .close {
  color: white;
  font-size: 2em;
  right: 1em;
  position: absolute;
  z-index: 1;
}

.hidden {
  display: none;
}

p .smcap {
  font-variant: small-caps;
}

#first {
  text-indent: 1em;
}

h1, .center {
  text-align: center;
}

nav a, footer a {
  color: #ddd;
}

footer p {
  margin-left: auto;
  margin-right: auto;
  max-width: 50em;
}

#num {
  font-family: 'Fira Code';
}

ul {
  list-style-image: url('../pics/bullet.svg');
}

.dropdown-content {
  display: none;
}

.dropdown:hover .dropdown-content {
  display: block;
}

